# fiap-tcf1-mlops

./: README.md  books_production.db  pyproject.toml
app/: main.py
scripts/: __init__.py  config_database.py  insert_database.py  models.py  schema_pydantic.py  scrapping.py  utils.py
